--- a/ARMdps/ARMdps.csproj
+++ b/ARMdps/ARMdps.csproj
@@ -67,6 +67,6 @@
     </Content>
   </ItemGroup>
 
-  <ProjectExtensions><VisualStudio><UserProperties wwwroot_4json_4department_1json__JsonSchema="js" /></VisualStudio></ProjectExtensions>
+  <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
 
 </Project>
